<resources>
    <string name="app_name">Car_Remember</string>
    <string name="acceder">Acceder</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="ajustes">Ajustes</string>
    <string name="aut">AutorApp</string>
    <string name="cita">Próxima Cita:</string>
    <string name="desc">Imagen de Google Maps</string>
    <string name="llegar">Como llegar</string>
    <string name="modelo">Modelo</string>
    <string name="matricula">Matricula</string>
    <string name="reparaciones">Repaciones</string>
    <string name="fec">Fecha</string>
    <string name="hor">Hora</string>
    <string name="coches">Ver\nCoches</string>
    <string name="sos">SOS\n</string>
    <string name="n_cita">Nueva\nCita</string>
    <string name="cerrar">Cerrar\nSesion</string>
    <string name="autor">AutorApp: Iván Moreno García Estudiante 2º DAM</string>
    <string name="proyecto">Proyecto final del Modulo \n CFGS Desarrollo de Aplicaciones Multiplataforma</string>
    <string name="anadir_coche">Añadir \nCoche</string>
    <string name="bor_coc">Borrar Coche</string>
    <string name="marca">Marca</string>
    <string name="propietario">Propietario</string>
    <string name="anio">Año</string>
    <string name="bastidor">Numero Bastidor</string>
    <string name="borrar_cita">Borrar Cita</string>
    <string name="edFecha">Editar Fecha</string>
    <string name="eleg_coc">Elegir Coche</string>
    <string name="elec_rep">Elegir Reparacion</string>
    <string name="elec_fec">Elegir Fecha</string>
    <string name="recargar">Recargar Coches</string>
    <string name="recargarR">Recargar Reparaciones</string>
    <string name="emergencias">Llamar Emergencias</string>
    <string name="tel_taller">Llamar al taller</string>
    <string name="llegar_taller">Llegar al taller</string>
    <string name="llegar_sos">Llegar al Hospitalr</string>
    <string name="taller">Taller</string>
    <string name="hospital">Hospital</string>
    <string name="g_civil">Guardia Civil</string>
    <string name="google_maps_key">AIzaSyACRSYqwOLucDpnijYbrc2-4mgbHkZLKF4</string>
</resources>