<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matricula" />

        <EditText
            android:id="@+id/etMatriculaED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/matricula"
            android:inputType="text"  >
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvBastidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bastidor" />

        <EditText
            android:id="@+id/etBastidorED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bastidor"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marca" />

        <EditText
            android:id="@+id/etMarcaED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo" />

        <EditText
            android:id="@+id/etModeloED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/modelo"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvTrabajos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anio" />

        <EditText
            android:id="@+id/etAnioED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/anio"
            android:inputType="date" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPropietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/propietario" />

        <EditText
            android:id="@+id/etPropietarioED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/propietario"
            android:inputType="none" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_ncita"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="borraCoche"
            android:text="@string/bor_coc" />

        <Button
            android:id="@+id/btnEdFecha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editarCoche"
            android:text="@android:string/ok" />
    </TableRow>

</TableLayout>